# ml-bench

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: benchmark.rs  main.rs
